# rustything

./: .gitignore  README.md
docs/: book.toml
rustything/: Cargo.toml
rustything/src/: main.rs
